        PR opt/10116         * ifcvt.c (find_if_block): Disallow tablejump insns outgoing         from then_bb or else_bb after flow2.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@64750 138bc75d-0d04-0410-961f-82ee72b054a4